# libjaylink

./: HACKING  Makefile.am  NEWS  README.md  configure.ac  meson.build  meson_options.txt
contrib/: 60-libjaylink.rules  99-libjaylink.rules
libjaylink/: Makefile.am  discovery_usb.c  fine.c  libjaylink.h  meson.build
